Fixed Token Security

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 databaseToken=mongodb+srv://bao:V9xga3AmA@baos-database.z98so4c.mongodb.net/?retryWrites=true&w=majority&appName=baos-database
-token=MTI2NTUwMzgzODI5NTgxODI3MA.G0zC7z.cyEDtOKUhB9szzLhtL42xZpyGq6pULKK57Qgr8
+token=MTI2NTUwMzgzODI5NTgxODI3MA.GvoCSf.at6fOpt7MnqzrvMz6Q40RfLFGinPiFnFrywaPU
