--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "mongoose": "^8.5.1",
     "ms": "^2.1.3",
     "node-fetch": "^2.7.0",
-    "play-dl": "^1.9.7"
+    "play-dl": "^1.9.7",
+    "winston": "^3.13.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0"
   }
 }
