--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/bot.js",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "node bot.js"
   },
   "keywords": [],
@@ -30,7 +31,9 @@
     "mongoose": "^8.5.1",
     "ms": "^2.1.3",
     "node-fetch": "^2.7.0",
+    "patch-package": "^8.0.0",
     "play-dl": "^1.9.7",
+    "postinstall-postinstall": "^2.1.0",
     "sodium-native": "^4.1.1",
     "winston": "^3.13.1"
   },
