--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/builders": "^1.8.2",
     "ansi-colors": "^4.1.3",
     "canvafy": "^7.1.0",
+    "consola": "^3.2.3",
     "discord-giveaways-super": "^1.1.0",
     "discord-regiveaways": "^1.4.0",
     "discord.js": "^14.15.3",
